monitoring/grafana/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: grafana-gateway
spec:
  selector:
    istio: gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-vs
spec:
  hosts:
  - "grafana.local"
  gateways:
  - grafana-gateway
  http:
  - name: 'grafana-kiali'
    match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: grafana.monitoring.svc.cluster.local
